--- a/css/style.css
+++ b/css/style.css
@@ -20,14 +20,34 @@ body {
 
 .grid-container {
   box-shadow: 0px 12px 19px 1px rgba(152, 165, 189, 0.3);
+  border-radius: 0.4em;
+}
+@media (min-width: 1000px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 317px);
+    grid-template-rows: repeat(2, auto);
+  }
 }
 
 .grid-component {
-  max-width: 400px;
   width: 310px;
-  padding: 1.8rem 1.5rem;
+  padding: 2em 1.4em;
   background-color: white;
   border-radius: 0.4em 0.4em 0 0;
+}
+@media (min-width: 1000px) {
+  .grid-component {
+    width: 317px;
+    padding: 2.5em 2.8em;
+  }
+}
+@media (min-width: 1000px) {
+  .grid-component {
+    grid-column: 1/3;
+    width: auto;
+    font-size: 1.2rem;
+  }
 }
 .grid-component .grid-component__title {
   letter-spacing: 0.01em;
@@ -43,6 +63,11 @@ body {
   font-weight: 700;
   margin-bottom: 1.2em;
 }
+@media (min-width: 1000px) {
+  .grid-component .grid-component__secondary-title {
+    margin-bottom: 0.4em;
+  }
+}
 .grid-component .grid-component__par {
   letter-spacing: 0.01em;
   color: #98a5bd;
@@ -52,11 +77,21 @@ body {
 }
 
 .grid-component-sub {
-  max-width: 400px;
   width: 310px;
-  padding: 1.8rem 1.5rem;
+  padding: 2em 1.4em;
   background-color: #29b1af;
   color: #f2f2f2;
+}
+@media (min-width: 1000px) {
+  .grid-component-sub {
+    width: 317px;
+    padding: 2.5em 2.8em;
+  }
+}
+@media (min-width: 1000px) {
+  .grid-component-sub {
+    border-radius: 0 0 0 0.4em;
+  }
 }
 .grid-component-sub .grid-component-sub__title {
   font-size: 1.2em;
@@ -66,7 +101,7 @@ body {
   display: flex;
   font-size: 2em;
   font-weight: 700;
-  margin-bottom: 0.3em;
+  margin-bottom: 0.2em;
 }
 .grid-component-sub .grid-component-sub__price_highlight .grid-component-sub__price {
   letter-spacing: 0.01em;
@@ -76,14 +111,27 @@ body {
   align-self: center;
   margin-left: 1em;
 }
+.grid-component-sub .grid-component-sub__par {
+  font-size: 0.95em;
+}
 
 .grid-component-why {
-  max-width: 400px;
   width: 310px;
-  padding: 1.8rem 1.5rem;
+  padding: 2em 1.4em;
   background-color: #2ec6c3;
   color: #f2f2f2;
   border-radius: 0 0 0.4em 0.4em;
+}
+@media (min-width: 1000px) {
+  .grid-component-why {
+    width: 317px;
+    padding: 2.5em 2.8em;
+  }
+}
+@media (min-width: 1000px) {
+  .grid-component-why {
+    border-radius: 0 0 0.4em 0;
+  }
 }
 .grid-component-why .grid-component-why__title {
   font-size: 1.2em;
