--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -9,11 +9,22 @@
 
 .grid-container {
   box-shadow: 0px 12px 19px 1px rgba(152, 165, 189, 0.3);
+  border-radius: 0.4em;
+  @media (min-width: 1000px) {
+    display: grid;
+    grid-template-columns: repeat(2, 317px);
+    grid-template-rows: repeat(2, auto);
+  }
 }
 
 .grid-component {
   @include card-style(white);
   border-radius: 0.4em 0.4em 0 0;
+  @media (min-width: 1000px) {
+    grid-column: 1/3;
+    width: auto;
+    font-size: 1.2rem;
+  }
 
   .grid-component__title {
     @include text-style(lighten($cyan, 10%), 1.3em);
@@ -23,6 +34,9 @@
   .grid-component__secondary-title {
     @include text-style(lighten($bright-yellow, 10%), 0.95em);
     margin-bottom: 1.2em;
+    @media (min-width: 1000px) {
+      margin-bottom: 0.4em;
+    }
   }
 
   .grid-component__par {
@@ -34,6 +48,9 @@
 .grid-component-sub {
   @include card-style($cyan);
   color: darken(white, 5%);
+  @media (min-width: 1000px) {
+    border-radius: 0 0 0 0.4em;
+  }
 
   .grid-component-sub__title {
     font-size: 1.2em;
@@ -44,7 +61,7 @@
     display: flex;
     font-size: 2em;
     font-weight: 700;
-    margin-bottom: 0.3em;
+    margin-bottom: 0.2em;
 
     .grid-component-sub__price {
       @include text-style(lighten($cyan, 40%), 0.5em, 400);
@@ -52,12 +69,19 @@
       margin-left: 1em;
     }
   }
+
+  .grid-component-sub__par {
+    font-size: 0.95em;
+  }
 }
 
 .grid-component-why {
   @include card-style(lighten($cyan, 5%));
   color: darken(white, 5%);
   border-radius: 0 0 0.4em 0.4em;
+  @media (min-width: 1000px) {
+    border-radius: 0 0 0.4em 0;
+  }
 
   .grid-component-why__title {
     font-size: 1.2em;
